2006-02-15  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/elem.scm, src/kahua/server.scm, test/server.scm:
	Added `with-ie' element.
	Supported `Conditional Comments for Internet Explorer'.

2006-02-04  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/persistence.scm:
	Changed to use dbi-do instead of dbi-execute-query.

2006-02-01  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm:
	Added kahua-header-set!.
	Added "x-kahua-headers" to kahua context.

	* src/kahua/sandbox.scm:
	Changed disable-bindings syntax to use `define' instead of `define-macro'.

2006-01-28  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/persistence.scm:
	Added dataval-type method to <kahua-db-dbi>.
	dataval-type return type of dataval field.

2006-01-27  Katsutoshi Itoh  <cut-sea@kahua.org>

	* src/kahua/persistence.scm:
	modify with-db macro.
	We can use with-db macro whiout knowledge for
	current-db's path name.

2006-01-22  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/persistence.scm:
	Changed id-counter writer to use sys-mkstemp.
	(Patch from Tatsuya BIZENN)

	* src/kahua-server.scm:
	Changed to block SIGINT, SIGHUP SIGTERM signal on accept-handler.
	(Patch from Tatsuya BIZENN)

2006-01-14  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm: Added interp-json, <json-base>, x->json.

2006-01-10  TAHARA Yusei  <yusei@domen.cx>

	* src/kahua/serialize.scm, test/serialize.scm:
	Added keyword support.

2006-01-09  TAHARA Yusei  <yusei@domen.cx>

	* src/kahua/serialize.scm:
	Bug fixed.
	* test/serialize.scm, test/Makefile.in:
	Added test code.

2006-01-09  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm:
	Added kahua-render proc.
	Added interp-css.

	* src/kahua-server.scm:
	Added kahua-write-static-file.
	Added kahua-hook-initial.
	Improved kahua-delete-hook!.

2006-01-09  Nobuo Yamashita  <nobsun@sampou.org>

	* test/many-as.kahua, test/dead-lock.scm, test/Makefile.in
	Added.  This test reproduced dead-lock in the moment.
