@@ -1,3 +1,9 @@
+2006-02-17  SHIBATA Tomohisa  <shibata@kahua.org>
+
+	* src/kahua/test/worker.scm:
+	Chnaged `set-gsid' to test session setting.
+p
+
 2006-02-15  SHIBATA Tomohisa  <shibata@kahua.org>
 
 	* src/kahua/elem.scm, src/kahua/server.scm, test/server.scm:
